RESOLVED FIXED300515
[css-anchor-position-1] Fixed anchor positioned boxes do not scroll into view
https://bugs.webkit.org/show_bug.cgi?id=300515
Summary [css-anchor-position-1] Fixed anchor positioned boxes do not scroll into view
fantasai
Reported 2025-10-10 10:25:44 PDT
This is preventing keyboard navigation into these boxes. See https://github.com/w3c/csswg-drafts/issues/11110 We need to fix LocalFrameView::scrollRectToVisible()
Attachments
Radar WebKit Bug Importer
Comment 1 2025-10-10 10:25:51 PDT
fantasai
Comment 2 2025-10-30 13:51:22 PDT
EWS
Comment 3 2025-10-30 20:23:54 PDT
Committed 302368@main (1ebd10ef5e85): <https://commits.webkit.org/302368@main> Reviewed commits have been landed. Closing PR #53214 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.